# MEPP

src/components/Examples/Skeleton_Extraction/src/: Skeleton_Extraction_Component.cpp  Skeleton_Extraction_Component.h  mepp_component_Skeleton_Extraction_plugin.cpp
src/components/Examples/Skeleton_Extraction/src/tools/: mesh2skeleton.h  openmeshToPolyhedron.h  skeleton_extraction.h
src/components/Tools/HKS/: CMakeLists.txt
src/components/Tools/HKS/src/: HKS_Component.cpp  HKS_Component.h  HKS_Items.h  HKS_Polyhedron.h  dialSettings_HKS.cpp  dialSettings_HKS.hxx  dialSettings_HKS.ui  mepp_component_HKS_plugin.cpp  mepp_component_HKS_plugin.hxx
src/components/Tools/HKS/src/tools/: eigendecomposition.cpp  eigendecomposition.h  generate_lpmatrix.h  hks.cpp  hks.h
src/components/Tools/Partition/: CMakeLists.txt
src/components/Tools/Partition/cmake/: use_components.txt
src/components/Tools/Partition/src/: Partition_Component.cpp  Partition_Component.h  Partition_Items.h  Partition_Polyhedron.h  dialSettings_Partition.cpp  dialSettings_Partition.hxx  dialSettings_Partition.ui  mepp_component_Partition_plugin.cpp  mepp_component_Partition_plugin.hxx
src/components/Tools/Partition/src/tools/: segmentation.cpp  segmentation.h  submeshes.h
src/components/Tools/SDF/: CMakeLists.txt
src/components/Tools/SDF/src/: SDF_Component.cpp  SDF_Component.h  SDF_Items.h  SDF_Polyhedron.h  dialSettings_SDF.cpp  dialSettings_SDF.hxx  dialSettings_SDF.ui  mepp_component_SDF_plugin.cpp  mepp_component_SDF_plugin.hxx
src/components/Tools/SDF/src/tools/: polyhedron.h  sdf.cpp  sdf.h
src/components/Tools/Skeleton_Extraction/: CMakeLists.txt
src/components/Tools/Skeleton_Extraction/cmake/: FindOpenMesh.cmake
src/components/Tools/Skeleton_Extraction/src/: Skeleton_Extraction_Component.cpp  Skeleton_Extraction_Component.h  Skeleton_Extraction_Items.h  Skeleton_Extraction_Polyhedron.h  dialSettings_Skeleton_Extraction.cpp  dialSettings_Skeleton_Extraction.hxx  dialSettings_Skeleton_Extraction.ui  mepp_component_Skeleton_Extraction_plugin.cpp  mepp_component_Skeleton_Extraction_plugin.hxx
src/components/Tools/Skeleton_Extraction/src/tools/: mesh_contraction.h  mesh_simplification.h  mesh_simplification.hxx  skeleton.cpp  skeleton.h  skeleton_extraction.cpp
src/mepp/: viewer.cpp  viewer.hxx
src/mepp/Polyhedron/: polyhedron_shared_items.h
src/tests/HKS/: CMakeLists.txt  main.cpp
src/tests/Skeleton_Extraction/: CMakeLists.txt  main.cpp
